[package]
name = "me-steal"
version = "0.1.0"
edition = "2018"
authors = ["harvey298"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = {default-features = false, features = ["client", "gateway", "rustls_backend", "model"], version = "0.10" }
tempfile = "3.2.0"
error-chain = "0.12.4"
reqwest = "0.11.6"
curl = "0.4.39"
checksums = "0.9.0" # https://github.com/alexcrichton/curl-rust
# uuid = { version = "0.8", features = ["serde", "v4"] } # https://docs.rs/uuid/0.8.2/uuid/
rand = "0.8.4"
fs_extra = "1.2.0" # https://docs.rs/fs_extra/1.2.0/fs_extra/file/fn.move_file.html